--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,13 @@ apply plugin: 'com.huawei.ohos.app'
 ohos {
     signingConfigs {
         debug {
-            storeFile file('C:\\Users\\jianx\\DevEcoStudioProjects\\HMWatchAssist\\WatchGT\\p12\\p12.p12')
-            storePassword '000000194778777EFB3A6ABC9F69210571685650864BE2BC1E7C8AD560434DC2D1EF8E7D0AE2387210'
+            storeFile file('C:\\Users\\jianx\\DevEcoStudioProjects\\Assist\\WatchGT\\p12\\p12.p12')
+            storePassword '000000196625DF81256F3CA104AF70376FE9E5E0337FE8AFE8B84F97B33C33344B6C0474DFF181760E'
             keyAlias = 'Assist'
-            keyPassword '00000019D867F4E2C4085654B20E992D990C9CB4AF8DCE49B836FE6B592FB0AA30ED2A7B2C4C47DED3'
+            keyPassword '000000194EEB556BA16B1126C3F910A626362E167F9E63EAEB27FE62DE408562B113EE87B446DE2361'
             signAlg = 'SHA256withECDSA'
-            profile file('C:\\Users\\jianx\\DevEcoStudioProjects\\HMWatchAssist\\WatchGT\\p7b\\AssistDebug.p7b')
-            certpath file('C:\\Users\\jianx\\DevEcoStudioProjects\\HMWatchAssist\\WatchGT\\CER\\Assist.cer')
+            profile file('C:\\Users\\jianx\\DevEcoStudioProjects\\Assist\\WatchGT\\p7b\\AssistDebug.p7b')
+            certpath file('C:\\Users\\jianx\\DevEcoStudioProjects\\Assist\\WatchGT\\CER\\Assist.cer')
         }
     }
     compileSdkVersion 7
