--- a/entry/src/main/config.json
+++ b/entry/src/main/config.json
@@ -28,8 +28,7 @@
     "js": [
       {
         "pages": [
-          "pages/index/index",
-          "pages/countDown/page"
+          "pages/index/index"
         ],
         "name": "default"
       }
